--- a/rest-test/src/main/resources/application.properties
+++ b/rest-test/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+#spring.datasource.url=jdbc:sqlserver://LAPTOP-374I6EKH\\SQLEXPRESS;databaseName=LibreriaDB
+#spring.datasource.username=sa
+#spring.datasource.password=Soleil11
 
+#spring.jpa.properties.hibernate.format_sql=true
+
+spring.datasource.url= jdbc:sqlserver://localhost:1433;encrypt=true;trustServerCertificate=true;databaseName=LibreriaTest
+spring.datasource.username=librero
+spring.datasource.password=librero
+
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.SQLServerDialect
+spring.jpa.hibernate.ddl-auto= update
