--- a/rest-test/src/main/resources/application.properties
+++ b/rest-test/src/main/resources/application.properties
@@ -4,8 +4,8 @@
 
 #spring.jpa.properties.hibernate.format_sql=true
 
-spring.datasource.url= jdbc:sqlserver://localhost:1433;encrypt=true;trustServerCertificate=true;databaseName=LibreriaTest2
+spring.datasource.url= jdbc:sqlserver://localhost:1433;encrypt=true;trustServerCertificate=true;databaseName=LibreriaTest3
 spring.datasource.username=librero
 spring.datasource.password=librero
 
-#spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.ddl-auto= update
